[ci skip] Updates

--- a/classes/bstreeviewnodestate.html
+++ b/classes/bstreeviewnodestate.html
@@ -106,7 +106,7 @@
 					<div class="tsd-signature tsd-kind-icon">_visible<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/ced46ce/src/lib/BSTreeViewNodeState.ts#L19">lib/BSTreeViewNodeState.ts:19</a></li>
+							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/9ff9c25/src/lib/BSTreeViewNodeState.ts#L19">lib/BSTreeViewNodeState.ts:19</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -125,7 +125,7 @@
 					<div class="tsd-signature tsd-kind-icon">checked<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">null</span><span class="tsd-signature-symbol"> = false</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/ced46ce/src/lib/BSTreeViewNodeState.ts#L6">lib/BSTreeViewNodeState.ts:6</a></li>
+							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/9ff9c25/src/lib/BSTreeViewNodeState.ts#L6">lib/BSTreeViewNodeState.ts:6</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -140,7 +140,7 @@
 					<div class="tsd-signature tsd-kind-icon">disabled<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span><span class="tsd-signature-symbol"> = false</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/ced46ce/src/lib/BSTreeViewNodeState.ts#L8">lib/BSTreeViewNodeState.ts:8</a></li>
+							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/9ff9c25/src/lib/BSTreeViewNodeState.ts#L8">lib/BSTreeViewNodeState.ts:8</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -155,7 +155,7 @@
 					<div class="tsd-signature tsd-kind-icon">expanded<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">null</span><span class="tsd-signature-symbol"> = null</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/ced46ce/src/lib/BSTreeViewNodeState.ts#L10">lib/BSTreeViewNodeState.ts:10</a></li>
+							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/9ff9c25/src/lib/BSTreeViewNodeState.ts#L10">lib/BSTreeViewNodeState.ts:10</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -170,7 +170,7 @@
 					<div class="tsd-signature tsd-kind-icon">selected<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span><span class="tsd-signature-symbol"> = false</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/ced46ce/src/lib/BSTreeViewNodeState.ts#L12">lib/BSTreeViewNodeState.ts:12</a></li>
+							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/9ff9c25/src/lib/BSTreeViewNodeState.ts#L12">lib/BSTreeViewNodeState.ts:12</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -204,10 +204,10 @@
 						<a href="bstreeviewdisableoptions.html" class="tsd-kind-icon">BSTree<wbr>View<wbr>Disable<wbr>Options</a>
 					</li>
 					<li class=" tsd-kind-class">
-						<a href="bstreevieweventoptions.html" class="tsd-kind-icon">BSTree<wbr>View<wbr>Event<wbr>Options</a>
+						<a href="bstreeviewexpandoptions.html" class="tsd-kind-icon">BSTree<wbr>View<wbr>Expand<wbr>Options</a>
 					</li>
 					<li class=" tsd-kind-class">
-						<a href="bstreeviewexpandoptions.html" class="tsd-kind-icon">BSTree<wbr>View<wbr>Expand<wbr>Options</a>
+						<a href="bstreeviewmethodoptions.html" class="tsd-kind-icon">BSTree<wbr>View<wbr>Method<wbr>Options</a>
 					</li>
 					<li class=" tsd-kind-class">
 						<a href="bstreeviewnode.html" class="tsd-kind-icon">BSTree<wbr>View<wbr>Node</a>
