--- a/classes/bs5themeclass.html
+++ b/classes/bs5themeclass.html
@@ -114,7 +114,7 @@
 							<aside class="tsd-sources">
 								<p>Implementation of <a href="../interfaces/bstreeviewtheme.html">BSTreeViewTheme</a>.<a href="../interfaces/bstreeviewtheme.html#getoptions">getOptions</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/ced46ce/src/lib/themes/BS5Theme.ts#L9">lib/themes/BS5Theme.ts:9</a></li>
+									<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/9ff9c25/src/lib/themes/BS5Theme.ts#L9">lib/themes/BS5Theme.ts:9</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Partial</span><span class="tsd-signature-symbol">&lt;</span><a href="bstreeviewoptions.html" class="tsd-signature-type">BSTreeViewOptions</a><span class="tsd-signature-symbol">&gt;</span></h4>
@@ -155,10 +155,10 @@
 						<a href="bstreeviewdisableoptions.html" class="tsd-kind-icon">BSTree<wbr>View<wbr>Disable<wbr>Options</a>
 					</li>
 					<li class=" tsd-kind-class">
-						<a href="bstreevieweventoptions.html" class="tsd-kind-icon">BSTree<wbr>View<wbr>Event<wbr>Options</a>
+						<a href="bstreeviewexpandoptions.html" class="tsd-kind-icon">BSTree<wbr>View<wbr>Expand<wbr>Options</a>
 					</li>
 					<li class=" tsd-kind-class">
-						<a href="bstreeviewexpandoptions.html" class="tsd-kind-icon">BSTree<wbr>View<wbr>Expand<wbr>Options</a>
+						<a href="bstreeviewmethodoptions.html" class="tsd-kind-icon">BSTree<wbr>View<wbr>Method<wbr>Options</a>
 					</li>
 					<li class=" tsd-kind-class">
 						<a href="bstreeviewnode.html" class="tsd-kind-icon">BSTree<wbr>View<wbr>Node</a>
