--- a/classes/bstreesearchoptions.html
+++ b/classes/bstreesearchoptions.html
@@ -77,7 +77,7 @@
 				<h3>Hierarchy</h3>
 				<ul class="tsd-hierarchy">
 					<li>
-						<a href="bstreevieweventoptions.html" class="tsd-signature-type">BSTreeViewEventOptions</a>
+						<a href="bstreeviewmethodoptions.html" class="tsd-signature-type">BSTreeViewMethodOptions</a>
 						<ul class="tsd-hierarchy">
 							<li>
 								<span class="target">BSTreeSearchOptions</span>
@@ -102,8 +102,6 @@
 								<li class="tsd-kind-property tsd-parent-kind-class tsd-is-inherited tsd-is-private"><a href="bstreesearchoptions.html#_force" class="tsd-kind-icon">_force</a></li>
 								<li class="tsd-kind-property tsd-parent-kind-class"><a href="bstreesearchoptions.html#exactmatch" class="tsd-kind-icon">exact<wbr>Match</a></li>
 								<li class="tsd-kind-property tsd-parent-kind-class"><a href="bstreesearchoptions.html#ignorecase" class="tsd-kind-icon">ignore<wbr>Case</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-class tsd-is-inherited"><a href="bstreesearchoptions.html#ignorechildren" class="tsd-kind-icon">ignore<wbr>Children</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-class tsd-is-inherited"><a href="bstreesearchoptions.html#lazyload" class="tsd-kind-icon">lazy<wbr>Load</a></li>
 								<li class="tsd-kind-property tsd-parent-kind-class"><a href="bstreesearchoptions.html#revealresults" class="tsd-kind-icon">reveal<wbr>Results</a></li>
 								<li class="tsd-kind-property tsd-parent-kind-class tsd-is-inherited"><a href="bstreesearchoptions.html#silent" class="tsd-kind-icon">silent</a></li>
 							</ul>
@@ -117,20 +115,20 @@
 					<a name="constructor" class="tsd-anchor"></a>
 					<h3>constructor</h3>
 					<ul class="tsd-signatures tsd-kind-constructor tsd-parent-kind-class tsd-is-inherited">
-						<li class="tsd-signature tsd-kind-icon">new BSTree<wbr>Search<wbr>Options<span class="tsd-signature-symbol">(</span>options<span class="tsd-signature-symbol">?: </span><a href="bstreevieweventoptions.html" class="tsd-signature-type">BSTreeViewEventOptions</a><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">Record</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type">unknown</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="bstreesearchoptions.html" class="tsd-signature-type">BSTreeSearchOptions</a></li>
+						<li class="tsd-signature tsd-kind-icon">new BSTree<wbr>Search<wbr>Options<span class="tsd-signature-symbol">(</span>options<span class="tsd-signature-symbol">?: </span><a href="bstreeviewmethodoptions.html" class="tsd-signature-type">BSTreeViewMethodOptions</a><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">Partial</span><span class="tsd-signature-symbol">&lt;</span><a href="bstreeviewmethodoptions.html" class="tsd-signature-type">BSTreeViewMethodOptions</a><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="bstreesearchoptions.html" class="tsd-signature-type">BSTreeSearchOptions</a></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
-								<p>Inherited from <a href="bstreevieweventoptions.html">BSTreeViewEventOptions</a>.<a href="bstreevieweventoptions.html#constructor">constructor</a></p>
+								<p>Inherited from <a href="bstreeviewmethodoptions.html">BSTreeViewMethodOptions</a>.<a href="bstreeviewmethodoptions.html#constructor">constructor</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/ced46ce/src/lib/BSTreeViewEventOptions.ts#L16">lib/BSTreeViewEventOptions.ts:16</a></li>
+									<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/9ff9c25/src/lib/BSTreeViewMethodOptions.ts#L13">lib/BSTreeViewMethodOptions.ts:13</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
-									<h5><span class="tsd-flag ts-flagDefault value">Default value</span> options: <a href="bstreevieweventoptions.html" class="tsd-signature-type">BSTreeViewEventOptions</a><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">Record</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type">unknown</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol"> = null</span></h5>
+									<h5><span class="tsd-flag ts-flagDefault value">Default value</span> options: <a href="bstreeviewmethodoptions.html" class="tsd-signature-type">BSTreeViewMethodOptions</a><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">Partial</span><span class="tsd-signature-symbol">&lt;</span><a href="bstreeviewmethodoptions.html" class="tsd-signature-type">BSTreeViewMethodOptions</a><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol"> = null</span></h5>
 								</li>
 							</ul>
 							<h4 class="tsd-returns-title">Returns <a href="bstreesearchoptions.html" class="tsd-signature-type">BSTreeSearchOptions</a></h4>
@@ -145,9 +143,9 @@
 					<h3><span class="tsd-flag ts-flagPrivate">Private</span> _force</h3>
 					<div class="tsd-signature tsd-kind-icon">_force<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span><span class="tsd-signature-symbol"> = false</span></div>
 					<aside class="tsd-sources">
-						<p>Inherited from <a href="bstreevieweventoptions.html">BSTreeViewEventOptions</a>.<a href="bstreevieweventoptions.html#_force">_force</a></p>
+						<p>Inherited from <a href="bstreeviewmethodoptions.html">BSTreeViewMethodOptions</a>.<a href="bstreeviewmethodoptions.html#_force">_force</a></p>
 						<ul>
-							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/ced46ce/src/lib/BSTreeViewEventOptions.ts#L16">lib/BSTreeViewEventOptions.ts:16</a></li>
+							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/9ff9c25/src/lib/BSTreeViewMethodOptions.ts#L13">lib/BSTreeViewMethodOptions.ts:13</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -166,7 +164,7 @@
 					<div class="tsd-signature tsd-kind-icon">exact<wbr>Match<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span><span class="tsd-signature-symbol"> = false</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/ced46ce/src/lib/BSTreeSearchOptions.ts#L10">lib/BSTreeSearchOptions.ts:10</a></li>
+							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/9ff9c25/src/lib/BSTreeSearchOptions.ts#L10">lib/BSTreeSearchOptions.ts:10</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -181,7 +179,7 @@
 					<div class="tsd-signature tsd-kind-icon">ignore<wbr>Case<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span><span class="tsd-signature-symbol"> = true</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/ced46ce/src/lib/BSTreeSearchOptions.ts#L8">lib/BSTreeSearchOptions.ts:8</a></li>
+							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/9ff9c25/src/lib/BSTreeSearchOptions.ts#L8">lib/BSTreeSearchOptions.ts:8</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -190,35 +188,13 @@
 						</div>
 					</div>
 				</section>
-				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class tsd-is-inherited">
-					<a name="ignorechildren" class="tsd-anchor"></a>
-					<h3>ignore<wbr>Children</h3>
-					<div class="tsd-signature tsd-kind-icon">ignore<wbr>Children<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span><span class="tsd-signature-symbol"> = false</span></div>
-					<aside class="tsd-sources">
-						<p>Inherited from <a href="bstreevieweventoptions.html">BSTreeViewEventOptions</a>.<a href="bstreevieweventoptions.html#ignorechildren">ignoreChildren</a></p>
-						<ul>
-							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/ced46ce/src/lib/BSTreeViewEventOptions.ts#L7">lib/BSTreeViewEventOptions.ts:7</a></li>
-						</ul>
-					</aside>
-				</section>
-				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class tsd-is-inherited">
-					<a name="lazyload" class="tsd-anchor"></a>
-					<h3>lazy<wbr>Load</h3>
-					<div class="tsd-signature tsd-kind-icon">lazy<wbr>Load<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span><span class="tsd-signature-symbol"> = false</span></div>
-					<aside class="tsd-sources">
-						<p>Inherited from <a href="bstreevieweventoptions.html">BSTreeViewEventOptions</a>.<a href="bstreevieweventoptions.html#lazyload">lazyLoad</a></p>
-						<ul>
-							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/ced46ce/src/lib/BSTreeViewEventOptions.ts#L9">lib/BSTreeViewEventOptions.ts:9</a></li>
-						</ul>
-					</aside>
-				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class">
 					<a name="revealresults" class="tsd-anchor"></a>
 					<h3>reveal<wbr>Results</h3>
 					<div class="tsd-signature tsd-kind-icon">reveal<wbr>Results<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span><span class="tsd-signature-symbol"> = true</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/ced46ce/src/lib/BSTreeSearchOptions.ts#L12">lib/BSTreeSearchOptions.ts:12</a></li>
+							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/9ff9c25/src/lib/BSTreeSearchOptions.ts#L12">lib/BSTreeSearchOptions.ts:12</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -232,9 +208,9 @@
 					<h3>silent</h3>
 					<div class="tsd-signature tsd-kind-icon">silent<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span><span class="tsd-signature-symbol"> = false</span></div>
 					<aside class="tsd-sources">
-						<p>Inherited from <a href="bstreevieweventoptions.html">BSTreeViewEventOptions</a>.<a href="bstreevieweventoptions.html#silent">silent</a></p>
+						<p>Inherited from <a href="bstreeviewmethodoptions.html">BSTreeViewMethodOptions</a>.<a href="bstreeviewmethodoptions.html#silent">silent</a></p>
 						<ul>
-							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/ced46ce/src/lib/BSTreeViewEventOptions.ts#L6">lib/BSTreeViewEventOptions.ts:6</a></li>
+							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/9ff9c25/src/lib/BSTreeViewMethodOptions.ts#L6">lib/BSTreeViewMethodOptions.ts:6</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -275,12 +251,6 @@
 							<li class=" tsd-kind-property tsd-parent-kind-class">
 								<a href="bstreesearchoptions.html#ignorecase" class="tsd-kind-icon">ignore<wbr>Case</a>
 							</li>
-							<li class=" tsd-kind-property tsd-parent-kind-class tsd-is-inherited">
-								<a href="bstreesearchoptions.html#ignorechildren" class="tsd-kind-icon">ignore<wbr>Children</a>
-							</li>
-							<li class=" tsd-kind-property tsd-parent-kind-class tsd-is-inherited">
-								<a href="bstreesearchoptions.html#lazyload" class="tsd-kind-icon">lazy<wbr>Load</a>
-							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-class">
 								<a href="bstreesearchoptions.html#revealresults" class="tsd-kind-icon">reveal<wbr>Results</a>
 							</li>
@@ -298,10 +268,10 @@
 						<a href="bstreeviewdisableoptions.html" class="tsd-kind-icon">BSTree<wbr>View<wbr>Disable<wbr>Options</a>
 					</li>
 					<li class=" tsd-kind-class">
-						<a href="bstreevieweventoptions.html" class="tsd-kind-icon">BSTree<wbr>View<wbr>Event<wbr>Options</a>
+						<a href="bstreeviewexpandoptions.html" class="tsd-kind-icon">BSTree<wbr>View<wbr>Expand<wbr>Options</a>
 					</li>
 					<li class=" tsd-kind-class">
-						<a href="bstreeviewexpandoptions.html" class="tsd-kind-icon">BSTree<wbr>View<wbr>Expand<wbr>Options</a>
+						<a href="bstreeviewmethodoptions.html" class="tsd-kind-icon">BSTree<wbr>View<wbr>Method<wbr>Options</a>
 					</li>
 					<li class=" tsd-kind-class">
 						<a href="bstreeviewnode.html" class="tsd-kind-icon">BSTree<wbr>View<wbr>Node</a>
