--- a/classes/bstreeviewmethodoptions.html
+++ b/classes/bstreeviewmethodoptions.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>BSTreeViewEventOptions | @jbtronics/bs-treeview</title>
+	<title>BSTreeViewMethodOptions | @jbtronics/bs-treeview</title>
 	<meta name="description" content="Documentation for @jbtronics/bs-treeview">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
@@ -56,10 +56,10 @@
 					<a href="../globals.html">Globals</a>
 				</li>
 				<li>
-					<a href="bstreevieweventoptions.html">BSTreeViewEventOptions</a>
+					<a href="bstreeviewmethodoptions.html">BSTreeViewMethodOptions</a>
 				</li>
 			</ul>
-			<h1>Class BSTreeViewEventOptions</h1>
+			<h1>Class BSTreeViewMethodOptions</h1>
 		</div>
 	</div>
 </header>
@@ -77,7 +77,7 @@
 				<h3>Hierarchy</h3>
 				<ul class="tsd-hierarchy">
 					<li>
-						<span class="target">BSTreeViewEventOptions</span>
+						<span class="target">BSTreeViewMethodOptions</span>
 						<ul class="tsd-hierarchy">
 							<li>
 								<a href="bstreesearchoptions.html" class="tsd-signature-type">BSTreeSearchOptions</a>
@@ -102,16 +102,14 @@
 						<section class="tsd-index-section ">
 							<h3>Constructors</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-constructor tsd-parent-kind-class"><a href="bstreevieweventoptions.html#constructor" class="tsd-kind-icon">constructor</a></li>
+								<li class="tsd-kind-constructor tsd-parent-kind-class"><a href="bstreeviewmethodoptions.html#constructor" class="tsd-kind-icon">constructor</a></li>
 							</ul>
 						</section>
 						<section class="tsd-index-section ">
 							<h3>Properties</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-property tsd-parent-kind-class tsd-is-private"><a href="bstreevieweventoptions.html#_force" class="tsd-kind-icon">_force</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-class"><a href="bstreevieweventoptions.html#ignorechildren" class="tsd-kind-icon">ignore<wbr>Children</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-class"><a href="bstreevieweventoptions.html#lazyload" class="tsd-kind-icon">lazy<wbr>Load</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-class"><a href="bstreevieweventoptions.html#silent" class="tsd-kind-icon">silent</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-class tsd-is-private"><a href="bstreeviewmethodoptions.html#_force" class="tsd-kind-icon">_force</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-class"><a href="bstreeviewmethodoptions.html#silent" class="tsd-kind-icon">silent</a></li>
 							</ul>
 						</section>
 					</div>
@@ -123,22 +121,22 @@
 					<a name="constructor" class="tsd-anchor"></a>
 					<h3>constructor</h3>
 					<ul class="tsd-signatures tsd-kind-constructor tsd-parent-kind-class">
-						<li class="tsd-signature tsd-kind-icon">new BSTree<wbr>View<wbr>Event<wbr>Options<span class="tsd-signature-symbol">(</span>options<span class="tsd-signature-symbol">?: </span><a href="bstreevieweventoptions.html" class="tsd-signature-type">BSTreeViewEventOptions</a><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">Record</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type">unknown</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="bstreevieweventoptions.html" class="tsd-signature-type">BSTreeViewEventOptions</a></li>
+						<li class="tsd-signature tsd-kind-icon">new BSTree<wbr>View<wbr>Method<wbr>Options<span class="tsd-signature-symbol">(</span>options<span class="tsd-signature-symbol">?: </span><a href="bstreeviewmethodoptions.html" class="tsd-signature-type">BSTreeViewMethodOptions</a><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">Partial</span><span class="tsd-signature-symbol">&lt;</span><a href="bstreeviewmethodoptions.html" class="tsd-signature-type">BSTreeViewMethodOptions</a><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="bstreeviewmethodoptions.html" class="tsd-signature-type">BSTreeViewMethodOptions</a></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/ced46ce/src/lib/BSTreeViewEventOptions.ts#L16">lib/BSTreeViewEventOptions.ts:16</a></li>
+									<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/9ff9c25/src/lib/BSTreeViewMethodOptions.ts#L13">lib/BSTreeViewMethodOptions.ts:13</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
-									<h5><span class="tsd-flag ts-flagDefault value">Default value</span> options: <a href="bstreevieweventoptions.html" class="tsd-signature-type">BSTreeViewEventOptions</a><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">Record</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type">unknown</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol"> = null</span></h5>
+									<h5><span class="tsd-flag ts-flagDefault value">Default value</span> options: <a href="bstreeviewmethodoptions.html" class="tsd-signature-type">BSTreeViewMethodOptions</a><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">Partial</span><span class="tsd-signature-symbol">&lt;</span><a href="bstreeviewmethodoptions.html" class="tsd-signature-type">BSTreeViewMethodOptions</a><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol"> = null</span></h5>
 								</li>
 							</ul>
-							<h4 class="tsd-returns-title">Returns <a href="bstreevieweventoptions.html" class="tsd-signature-type">BSTreeViewEventOptions</a></h4>
+							<h4 class="tsd-returns-title">Returns <a href="bstreeviewmethodoptions.html" class="tsd-signature-type">BSTreeViewMethodOptions</a></h4>
 						</li>
 					</ul>
 				</section>
@@ -151,7 +149,7 @@
 					<div class="tsd-signature tsd-kind-icon">_force<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span><span class="tsd-signature-symbol"> = false</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/ced46ce/src/lib/BSTreeViewEventOptions.ts#L16">lib/BSTreeViewEventOptions.ts:16</a></li>
+							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/9ff9c25/src/lib/BSTreeViewMethodOptions.ts#L13">lib/BSTreeViewMethodOptions.ts:13</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -165,32 +163,12 @@
 					</div>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class">
-					<a name="ignorechildren" class="tsd-anchor"></a>
-					<h3>ignore<wbr>Children</h3>
-					<div class="tsd-signature tsd-kind-icon">ignore<wbr>Children<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span><span class="tsd-signature-symbol"> = false</span></div>
-					<aside class="tsd-sources">
-						<ul>
-							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/ced46ce/src/lib/BSTreeViewEventOptions.ts#L7">lib/BSTreeViewEventOptions.ts:7</a></li>
-						</ul>
-					</aside>
-				</section>
-				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class">
-					<a name="lazyload" class="tsd-anchor"></a>
-					<h3>lazy<wbr>Load</h3>
-					<div class="tsd-signature tsd-kind-icon">lazy<wbr>Load<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span><span class="tsd-signature-symbol"> = false</span></div>
-					<aside class="tsd-sources">
-						<ul>
-							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/ced46ce/src/lib/BSTreeViewEventOptions.ts#L9">lib/BSTreeViewEventOptions.ts:9</a></li>
-						</ul>
-					</aside>
-				</section>
-				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class">
 					<a name="silent" class="tsd-anchor"></a>
 					<h3>silent</h3>
 					<div class="tsd-signature tsd-kind-icon">silent<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span><span class="tsd-signature-symbol"> = false</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/ced46ce/src/lib/BSTreeViewEventOptions.ts#L6">lib/BSTreeViewEventOptions.ts:6</a></li>
+							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/9ff9c25/src/lib/BSTreeViewMethodOptions.ts#L6">lib/BSTreeViewMethodOptions.ts:6</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -223,33 +201,27 @@
 					<li class=" tsd-kind-class">
 						<a href="bstreeviewdisableoptions.html" class="tsd-kind-icon">BSTree<wbr>View<wbr>Disable<wbr>Options</a>
 					</li>
+					<li class=" tsd-kind-class">
+						<a href="bstreeviewexpandoptions.html" class="tsd-kind-icon">BSTree<wbr>View<wbr>Expand<wbr>Options</a>
+					</li>
 				</ul>
 				<ul class="current">
 					<li class="current tsd-kind-class">
-						<a href="bstreevieweventoptions.html" class="tsd-kind-icon">BSTree<wbr>View<wbr>Event<wbr>Options</a>
+						<a href="bstreeviewmethodoptions.html" class="tsd-kind-icon">BSTree<wbr>View<wbr>Method<wbr>Options</a>
 						<ul>
 							<li class=" tsd-kind-constructor tsd-parent-kind-class">
-								<a href="bstreevieweventoptions.html#constructor" class="tsd-kind-icon">constructor</a>
+								<a href="bstreeviewmethodoptions.html#constructor" class="tsd-kind-icon">constructor</a>
 							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-class tsd-is-private">
-								<a href="bstreevieweventoptions.html#_force" class="tsd-kind-icon">_force</a>
+								<a href="bstreeviewmethodoptions.html#_force" class="tsd-kind-icon">_force</a>
 							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-class">
-								<a href="bstreevieweventoptions.html#ignorechildren" class="tsd-kind-icon">ignore<wbr>Children</a>
-							</li>
-							<li class=" tsd-kind-property tsd-parent-kind-class">
-								<a href="bstreevieweventoptions.html#lazyload" class="tsd-kind-icon">lazy<wbr>Load</a>
-							</li>
-							<li class=" tsd-kind-property tsd-parent-kind-class">
-								<a href="bstreevieweventoptions.html#silent" class="tsd-kind-icon">silent</a>
+								<a href="bstreeviewmethodoptions.html#silent" class="tsd-kind-icon">silent</a>
 							</li>
 						</ul>
 					</li>
 				</ul>
 				<ul class="after-current">
-					<li class=" tsd-kind-class">
-						<a href="bstreeviewexpandoptions.html" class="tsd-kind-icon">BSTree<wbr>View<wbr>Expand<wbr>Options</a>
-					</li>
 					<li class=" tsd-kind-class">
 						<a href="bstreeviewnode.html" class="tsd-kind-icon">BSTree<wbr>View<wbr>Node</a>
 					</li>
