--- a/globals.html
+++ b/globals.html
@@ -74,8 +74,8 @@
 								<li class="tsd-kind-class"><a href="classes/bstreesearchoptions.html" class="tsd-kind-icon">BSTree<wbr>Search<wbr>Options</a></li>
 								<li class="tsd-kind-class"><a href="classes/bstreeview.html" class="tsd-kind-icon">BSTree<wbr>View</a></li>
 								<li class="tsd-kind-class"><a href="classes/bstreeviewdisableoptions.html" class="tsd-kind-icon">BSTree<wbr>View<wbr>Disable<wbr>Options</a></li>
-								<li class="tsd-kind-class"><a href="classes/bstreevieweventoptions.html" class="tsd-kind-icon">BSTree<wbr>View<wbr>Event<wbr>Options</a></li>
 								<li class="tsd-kind-class"><a href="classes/bstreeviewexpandoptions.html" class="tsd-kind-icon">BSTree<wbr>View<wbr>Expand<wbr>Options</a></li>
+								<li class="tsd-kind-class"><a href="classes/bstreeviewmethodoptions.html" class="tsd-kind-icon">BSTree<wbr>View<wbr>Method<wbr>Options</a></li>
 								<li class="tsd-kind-class"><a href="classes/bstreeviewnode.html" class="tsd-kind-icon">BSTree<wbr>View<wbr>Node</a></li>
 								<li class="tsd-kind-class"><a href="classes/bstreeviewnodestate.html" class="tsd-kind-icon">BSTree<wbr>View<wbr>Node<wbr>State</a></li>
 								<li class="tsd-kind-class"><a href="classes/bstreeviewoptions.html" class="tsd-kind-icon">BSTree<wbr>View<wbr>Options</a></li>
@@ -129,7 +129,7 @@
 					<div class="tsd-signature tsd-kind-icon">BASE_<wbr>CLASS<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"treeview"</span><span class="tsd-signature-symbol"> = &quot;treeview&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/ced46ce/src/lib/BSTreeView.ts#L30">lib/BSTreeView.ts:30</a></li>
+							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/9ff9c25/src/lib/BSTreeView.ts#L30">lib/BSTreeView.ts:30</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -141,7 +141,7 @@
 					<div class="tsd-signature tsd-kind-icon">EVENT_<wbr>DESTROYED<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"bs-tree:destroyed"</span><span class="tsd-signature-symbol"> = &quot;bs-tree:destroyed&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/ced46ce/src/lib/BSTreeViewEventNames.ts#L5">lib/BSTreeViewEventNames.ts:5</a></li>
+							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/9ff9c25/src/lib/BSTreeViewEventNames.ts#L5">lib/BSTreeViewEventNames.ts:5</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -151,7 +151,7 @@
 					<div class="tsd-signature tsd-kind-icon">EVENT_<wbr>INITIALIZED<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"bs-tree:initialized"</span><span class="tsd-signature-symbol"> = &quot;bs-tree:initialized&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/ced46ce/src/lib/BSTreeViewEventNames.ts#L2">lib/BSTreeViewEventNames.ts:2</a></li>
+							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/9ff9c25/src/lib/BSTreeViewEventNames.ts#L2">lib/BSTreeViewEventNames.ts:2</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -161,7 +161,7 @@
 					<div class="tsd-signature tsd-kind-icon">EVENT_<wbr>LOADING<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"bs-tree:loading"</span><span class="tsd-signature-symbol"> = &quot;bs-tree:loading&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/ced46ce/src/lib/BSTreeViewEventNames.ts#L16">lib/BSTreeViewEventNames.ts:16</a></li>
+							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/9ff9c25/src/lib/BSTreeViewEventNames.ts#L16">lib/BSTreeViewEventNames.ts:16</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -171,7 +171,7 @@
 					<div class="tsd-signature tsd-kind-icon">EVENT_<wbr>LOADING_<wbr>FAILED<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"bs-tree:loadingFailed"</span><span class="tsd-signature-symbol"> = &quot;bs-tree:loadingFailed&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/ced46ce/src/lib/BSTreeViewEventNames.ts#L1">lib/BSTreeViewEventNames.ts:1</a></li>
+							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/9ff9c25/src/lib/BSTreeViewEventNames.ts#L1">lib/BSTreeViewEventNames.ts:1</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -181,7 +181,7 @@
 					<div class="tsd-signature tsd-kind-icon">EVENT_<wbr>NODE_<wbr>CHECKED<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"bs-tree:nodeChecked"</span><span class="tsd-signature-symbol"> = &quot;bs-tree:nodeChecked&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/ced46ce/src/lib/BSTreeViewEventNames.ts#L6">lib/BSTreeViewEventNames.ts:6</a></li>
+							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/9ff9c25/src/lib/BSTreeViewEventNames.ts#L6">lib/BSTreeViewEventNames.ts:6</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -191,7 +191,7 @@
 					<div class="tsd-signature tsd-kind-icon">EVENT_<wbr>NODE_<wbr>COLLAPSED<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"bs-tree:nodeCollapsed"</span><span class="tsd-signature-symbol"> = &quot;bs-tree:nodeCollapsed&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/ced46ce/src/lib/BSTreeViewEventNames.ts#L7">lib/BSTreeViewEventNames.ts:7</a></li>
+							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/9ff9c25/src/lib/BSTreeViewEventNames.ts#L7">lib/BSTreeViewEventNames.ts:7</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -201,7 +201,7 @@
 					<div class="tsd-signature tsd-kind-icon">EVENT_<wbr>NODE_<wbr>DISABLED<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"bs-tree:nodeDisabled"</span><span class="tsd-signature-symbol"> = &quot;bs-tree:nodeDisabled&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/ced46ce/src/lib/BSTreeViewEventNames.ts#L8">lib/BSTreeViewEventNames.ts:8</a></li>
+							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/9ff9c25/src/lib/BSTreeViewEventNames.ts#L8">lib/BSTreeViewEventNames.ts:8</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -211,7 +211,7 @@
 					<div class="tsd-signature tsd-kind-icon">EVENT_<wbr>NODE_<wbr>ENABLED<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"bs-tree:nodeEnabled"</span><span class="tsd-signature-symbol"> = &quot;bs-tree:nodeEnabled&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/ced46ce/src/lib/BSTreeViewEventNames.ts#L9">lib/BSTreeViewEventNames.ts:9</a></li>
+							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/9ff9c25/src/lib/BSTreeViewEventNames.ts#L9">lib/BSTreeViewEventNames.ts:9</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -221,7 +221,7 @@
 					<div class="tsd-signature tsd-kind-icon">EVENT_<wbr>NODE_<wbr>EXPANDED<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"bs-tree:nodeExpanded"</span><span class="tsd-signature-symbol"> = &quot;bs-tree:nodeExpanded&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/ced46ce/src/lib/BSTreeViewEventNames.ts#L10">lib/BSTreeViewEventNames.ts:10</a></li>
+							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/9ff9c25/src/lib/BSTreeViewEventNames.ts#L10">lib/BSTreeViewEventNames.ts:10</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -231,7 +231,7 @@
 					<div class="tsd-signature tsd-kind-icon">EVENT_<wbr>NODE_<wbr>RENDERED<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"bs-tree:nodeRendered"</span><span class="tsd-signature-symbol"> = &quot;bs-tree:nodeRendered&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/ced46ce/src/lib/BSTreeViewEventNames.ts#L3">lib/BSTreeViewEventNames.ts:3</a></li>
+							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/9ff9c25/src/lib/BSTreeViewEventNames.ts#L3">lib/BSTreeViewEventNames.ts:3</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -241,7 +241,7 @@
 					<div class="tsd-signature tsd-kind-icon">EVENT_<wbr>NODE_<wbr>SELECTED<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"bs-tree:nodeSelected"</span><span class="tsd-signature-symbol"> = &quot;bs-tree:nodeSelected&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/ced46ce/src/lib/BSTreeViewEventNames.ts#L11">lib/BSTreeViewEventNames.ts:11</a></li>
+							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/9ff9c25/src/lib/BSTreeViewEventNames.ts#L11">lib/BSTreeViewEventNames.ts:11</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -251,7 +251,7 @@
 					<div class="tsd-signature tsd-kind-icon">EVENT_<wbr>NODE_<wbr>UNCHECKED<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"bs-tree:nodeUnchecked"</span><span class="tsd-signature-symbol"> = &quot;bs-tree:nodeUnchecked&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/ced46ce/src/lib/BSTreeViewEventNames.ts#L12">lib/BSTreeViewEventNames.ts:12</a></li>
+							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/9ff9c25/src/lib/BSTreeViewEventNames.ts#L12">lib/BSTreeViewEventNames.ts:12</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -261,7 +261,7 @@
 					<div class="tsd-signature tsd-kind-icon">EVENT_<wbr>NODE_<wbr>UNSELECTED<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"bs-tree:nodeUnselected"</span><span class="tsd-signature-symbol"> = &quot;bs-tree:nodeUnselected&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/ced46ce/src/lib/BSTreeViewEventNames.ts#L13">lib/BSTreeViewEventNames.ts:13</a></li>
+							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/9ff9c25/src/lib/BSTreeViewEventNames.ts#L13">lib/BSTreeViewEventNames.ts:13</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -271,7 +271,7 @@
 					<div class="tsd-signature tsd-kind-icon">EVENT_<wbr>RENDERED<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"bs-tree:rendered"</span><span class="tsd-signature-symbol"> = &quot;bs-tree:rendered&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/ced46ce/src/lib/BSTreeViewEventNames.ts#L4">lib/BSTreeViewEventNames.ts:4</a></li>
+							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/9ff9c25/src/lib/BSTreeViewEventNames.ts#L4">lib/BSTreeViewEventNames.ts:4</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -281,7 +281,7 @@
 					<div class="tsd-signature tsd-kind-icon">EVENT_<wbr>SEARCH_<wbr>CLEARED<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"bs-tree:searchCleared"</span><span class="tsd-signature-symbol"> = &quot;bs-tree:searchCleared&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/ced46ce/src/lib/BSTreeViewEventNames.ts#L15">lib/BSTreeViewEventNames.ts:15</a></li>
+							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/9ff9c25/src/lib/BSTreeViewEventNames.ts#L15">lib/BSTreeViewEventNames.ts:15</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -291,7 +291,7 @@
 					<div class="tsd-signature tsd-kind-icon">EVENT_<wbr>SEARCH_<wbr>COMPLETED<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"bs-tree:searchCompleted"</span><span class="tsd-signature-symbol"> = &quot;bs-tree:searchCompleted&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/ced46ce/src/lib/BSTreeViewEventNames.ts#L14">lib/BSTreeViewEventNames.ts:14</a></li>
+							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/9ff9c25/src/lib/BSTreeViewEventNames.ts#L14">lib/BSTreeViewEventNames.ts:14</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -302,13 +302,13 @@
 					<a name="templateelement" class="tsd-anchor"></a>
 					<h3>template<wbr>Element</h3>
 					<ul class="tsd-signatures tsd-kind-function">
-						<li class="tsd-signature tsd-kind-icon">template<wbr>Element<span class="tsd-signature-symbol">(</span>tagType<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span>, classes<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">HTMLElement</span></li>
+						<li class="tsd-signature tsd-kind-icon">template<wbr>Element<span class="tsd-signature-symbol">(</span>tagType<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span>, classes<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span>, role<span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">HTMLElement</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/ced46ce/src/lib/BSTreeViewTemplate.ts#L1">lib/BSTreeViewTemplate.ts:1</a></li>
+									<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/9ff9c25/src/lib/BSTreeViewTemplate.ts#L1">lib/BSTreeViewTemplate.ts:1</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -318,6 +318,9 @@
 								</li>
 								<li>
 									<h5>classes: <span class="tsd-signature-type">string</span></h5>
+								</li>
+								<li>
+									<h5><span class="tsd-flag ts-flagDefault value">Default value</span> role: <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> = null</span></h5>
 								</li>
 							</ul>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">HTMLElement</span></h4>
@@ -349,10 +352,10 @@
 						<a href="classes/bstreeviewdisableoptions.html" class="tsd-kind-icon">BSTree<wbr>View<wbr>Disable<wbr>Options</a>
 					</li>
 					<li class=" tsd-kind-class">
-						<a href="classes/bstreevieweventoptions.html" class="tsd-kind-icon">BSTree<wbr>View<wbr>Event<wbr>Options</a>
+						<a href="classes/bstreeviewexpandoptions.html" class="tsd-kind-icon">BSTree<wbr>View<wbr>Expand<wbr>Options</a>
 					</li>
 					<li class=" tsd-kind-class">
-						<a href="classes/bstreeviewexpandoptions.html" class="tsd-kind-icon">BSTree<wbr>View<wbr>Expand<wbr>Options</a>
+						<a href="classes/bstreeviewmethodoptions.html" class="tsd-kind-icon">BSTree<wbr>View<wbr>Method<wbr>Options</a>
 					</li>
 					<li class=" tsd-kind-class">
 						<a href="classes/bstreeviewnode.html" class="tsd-kind-icon">BSTree<wbr>View<wbr>Node</a>
