[ci skip] Updates

--- a/classes/bstreeviewtemplate.html
+++ b/classes/bstreeviewtemplate.html
@@ -114,60 +114,60 @@
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class">
 					<a name="badge" class="tsd-anchor"></a>
 					<h3>badge</h3>
-					<div class="tsd-signature tsd-kind-icon">badge<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">HTMLElement</span><span class="tsd-signature-symbol"> = templateElement(&quot;span&quot;, &quot;&quot;)</span></div>
+					<div class="tsd-signature tsd-kind-icon">badge<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">HTMLElement</span><span class="tsd-signature-symbol"> = templateElement(&#x27;span&#x27;, &#x27;&#x27;)</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/9ff9c25/src/lib/BSTreeViewTemplate.ts#L30">lib/BSTreeViewTemplate.ts:30</a></li>
+							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/b3ac71c/src/lib/BSTreeViewTemplate.ts#L34">lib/BSTreeViewTemplate.ts:34</a></li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class">
 					<a name="image" class="tsd-anchor"></a>
 					<h3>image</h3>
-					<div class="tsd-signature tsd-kind-icon">image<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">HTMLElement</span><span class="tsd-signature-symbol"> = templateElement(&quot;span&quot;, &quot;image&quot;)</span></div>
+					<div class="tsd-signature tsd-kind-icon">image<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">HTMLElement</span><span class="tsd-signature-symbol"> = templateElement(&#x27;span&#x27;, &#x27;image&#x27;)</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/9ff9c25/src/lib/BSTreeViewTemplate.ts#L29">lib/BSTreeViewTemplate.ts:29</a></li>
+							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/b3ac71c/src/lib/BSTreeViewTemplate.ts#L33">lib/BSTreeViewTemplate.ts:33</a></li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class">
 					<a name="indent" class="tsd-anchor"></a>
 					<h3>indent</h3>
-					<div class="tsd-signature tsd-kind-icon">indent<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">HTMLElement</span><span class="tsd-signature-symbol"> = templateElement(&quot;span&quot;, &quot;indent&quot;, &quot;none&quot;)</span></div>
+					<div class="tsd-signature tsd-kind-icon">indent<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">HTMLElement</span><span class="tsd-signature-symbol"> = templateElement(&#x27;span&#x27;, &#x27;indent&#x27;, &#x27;none&#x27;)</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/9ff9c25/src/lib/BSTreeViewTemplate.ts#L22">lib/BSTreeViewTemplate.ts:22</a></li>
+							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/b3ac71c/src/lib/BSTreeViewTemplate.ts#L26">lib/BSTreeViewTemplate.ts:26</a></li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class">
 					<a name="node" class="tsd-anchor"></a>
 					<h3>node</h3>
-					<div class="tsd-signature tsd-kind-icon">node<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">HTMLElement</span><span class="tsd-signature-symbol"> = templateElement(&quot;li&quot;, &quot;list-group-item&quot;, &quot;treeitem&quot;)</span></div>
+					<div class="tsd-signature tsd-kind-icon">node<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">HTMLElement</span><span class="tsd-signature-symbol"> = templateElement(&#x27;li&#x27;, &#x27;list-group-item&#x27;, &#x27;treeitem&#x27;)</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/9ff9c25/src/lib/BSTreeViewTemplate.ts#L21">lib/BSTreeViewTemplate.ts:21</a></li>
+							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/b3ac71c/src/lib/BSTreeViewTemplate.ts#L25">lib/BSTreeViewTemplate.ts:25</a></li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class">
 					<a name="text" class="tsd-anchor"></a>
 					<h3>text</h3>
-					<div class="tsd-signature tsd-kind-icon">text<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">HTMLElement</span><span class="tsd-signature-symbol"> = templateElement(&quot;span&quot;, &quot;text&quot;)</span></div>
+					<div class="tsd-signature tsd-kind-icon">text<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">HTMLElement</span><span class="tsd-signature-symbol"> = templateElement(&#x27;span&#x27;, &#x27;text&#x27;)</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/9ff9c25/src/lib/BSTreeViewTemplate.ts#L31">lib/BSTreeViewTemplate.ts:31</a></li>
+							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/b3ac71c/src/lib/BSTreeViewTemplate.ts#L35">lib/BSTreeViewTemplate.ts:35</a></li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class">
 					<a name="tree" class="tsd-anchor"></a>
 					<h3>tree</h3>
-					<div class="tsd-signature tsd-kind-icon">tree<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">HTMLElement</span><span class="tsd-signature-symbol"> = templateElement(&#x27;ul&#x27;, &quot;list-group&quot;, &quot;tree&quot;)</span></div>
+					<div class="tsd-signature tsd-kind-icon">tree<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">HTMLElement</span><span class="tsd-signature-symbol"> = templateElement(&#x27;ul&#x27;, &#x27;list-group&#x27;, &#x27;tree&#x27;)</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/9ff9c25/src/lib/BSTreeViewTemplate.ts#L20">lib/BSTreeViewTemplate.ts:20</a></li>
+							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/b3ac71c/src/lib/BSTreeViewTemplate.ts#L24">lib/BSTreeViewTemplate.ts:24</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -180,46 +180,46 @@
 					<div class="tsd-signature tsd-kind-icon">icon<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">object</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/9ff9c25/src/lib/BSTreeViewTemplate.ts#L23">lib/BSTreeViewTemplate.ts:23</a></li>
+							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/b3ac71c/src/lib/BSTreeViewTemplate.ts#L27">lib/BSTreeViewTemplate.ts:27</a></li>
 						</ul>
 					</aside>
 					<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-object-literal">
 						<a name="icon.check" class="tsd-anchor"></a>
 						<h3>check</h3>
-						<div class="tsd-signature tsd-kind-icon">check<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">HTMLElement</span><span class="tsd-signature-symbol"> = templateElement(&quot;span&quot;, &quot;icon check-icon&quot;)</span></div>
+						<div class="tsd-signature tsd-kind-icon">check<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">HTMLElement</span><span class="tsd-signature-symbol"> = templateElement(&#x27;span&#x27;, &#x27;icon check-icon&#x27;)</span></div>
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/9ff9c25/src/lib/BSTreeViewTemplate.ts#L26">lib/BSTreeViewTemplate.ts:26</a></li>
+								<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/b3ac71c/src/lib/BSTreeViewTemplate.ts#L30">lib/BSTreeViewTemplate.ts:30</a></li>
 							</ul>
 						</aside>
 					</section>
 					<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-object-literal">
 						<a name="icon.empty" class="tsd-anchor"></a>
 						<h3>empty</h3>
-						<div class="tsd-signature tsd-kind-icon">empty<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">HTMLElement</span><span class="tsd-signature-symbol"> = templateElement(&quot;span&quot;, &quot;icon&quot;, &quot;none&quot;)</span></div>
+						<div class="tsd-signature tsd-kind-icon">empty<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">HTMLElement</span><span class="tsd-signature-symbol"> = templateElement(&#x27;span&#x27;, &#x27;icon&#x27;, &#x27;none&#x27;)</span></div>
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/9ff9c25/src/lib/BSTreeViewTemplate.ts#L27">lib/BSTreeViewTemplate.ts:27</a></li>
+								<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/b3ac71c/src/lib/BSTreeViewTemplate.ts#L31">lib/BSTreeViewTemplate.ts:31</a></li>
 							</ul>
 						</aside>
 					</section>
 					<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-object-literal">
 						<a name="icon.expand" class="tsd-anchor"></a>
 						<h3>expand</h3>
-						<div class="tsd-signature tsd-kind-icon">expand<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">HTMLElement</span><span class="tsd-signature-symbol"> = templateElement(&quot;span&quot;, &quot;icon expand-icon&quot;, &quot;group&quot;)</span></div>
+						<div class="tsd-signature tsd-kind-icon">expand<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">HTMLElement</span><span class="tsd-signature-symbol"> = templateElement(&#x27;span&#x27;, &#x27;icon expand-icon&#x27;, &#x27;group&#x27;)</span></div>
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/9ff9c25/src/lib/BSTreeViewTemplate.ts#L25">lib/BSTreeViewTemplate.ts:25</a></li>
+								<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/b3ac71c/src/lib/BSTreeViewTemplate.ts#L29">lib/BSTreeViewTemplate.ts:29</a></li>
 							</ul>
 						</aside>
 					</section>
 					<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-object-literal">
 						<a name="icon.node-1" class="tsd-anchor"></a>
 						<h3>node</h3>
-						<div class="tsd-signature tsd-kind-icon">node<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">HTMLElement</span><span class="tsd-signature-symbol"> = templateElement(&quot;span&quot;, &quot;icon node-icon&quot;)</span></div>
+						<div class="tsd-signature tsd-kind-icon">node<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">HTMLElement</span><span class="tsd-signature-symbol"> = templateElement(&#x27;span&#x27;, &#x27;icon node-icon&#x27;)</span></div>
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/9ff9c25/src/lib/BSTreeViewTemplate.ts#L24">lib/BSTreeViewTemplate.ts:24</a></li>
+								<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/b3ac71c/src/lib/BSTreeViewTemplate.ts#L28">lib/BSTreeViewTemplate.ts:28</a></li>
 							</ul>
 						</aside>
 					</section>
