[ci skip] Updates

--- a/classes/bstreeviewmethodoptions.html
+++ b/classes/bstreeviewmethodoptions.html
@@ -127,7 +127,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/b3ac71c/src/lib/BSTreeViewMethodOptions.ts#L13">lib/BSTreeViewMethodOptions.ts:13</a></li>
+									<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/e840634/src/lib/BSTreeViewMethodOptions.ts#L13">lib/BSTreeViewMethodOptions.ts:13</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -149,12 +149,12 @@
 					<div class="tsd-signature tsd-kind-icon">_force<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span><span class="tsd-signature-symbol"> = false</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/b3ac71c/src/lib/BSTreeViewMethodOptions.ts#L13">lib/BSTreeViewMethodOptions.ts:13</a></li>
+							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/e840634/src/lib/BSTreeViewMethodOptions.ts#L13">lib/BSTreeViewMethodOptions.ts:13</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
 						<div class="lead">
-							<p>Force a change of the node state, even if the vaklue is not changed. Mostly useful for internal usage</p>
+							<p>Force a change of the node state, even if the value is not changed. Mostly useful for internal usage</p>
 						</div>
 						<dl class="tsd-comment-tags">
 							<dt>internal</dt>
@@ -168,7 +168,7 @@
 					<div class="tsd-signature tsd-kind-icon">silent<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span><span class="tsd-signature-symbol"> = false</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/b3ac71c/src/lib/BSTreeViewMethodOptions.ts#L6">lib/BSTreeViewMethodOptions.ts:6</a></li>
+							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/e840634/src/lib/BSTreeViewMethodOptions.ts#L6">lib/BSTreeViewMethodOptions.ts:6</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
