--- a/classes/bstreeviewexpandoptions.html
+++ b/classes/bstreeviewexpandoptions.html
@@ -120,7 +120,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="bstreeviewmethodoptions.html">BSTreeViewMethodOptions</a>.<a href="bstreeviewmethodoptions.html#constructor">constructor</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/b3ac71c/src/lib/BSTreeViewMethodOptions.ts#L13">lib/BSTreeViewMethodOptions.ts:13</a></li>
+									<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/e840634/src/lib/BSTreeViewMethodOptions.ts#L13">lib/BSTreeViewMethodOptions.ts:13</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -143,12 +143,12 @@
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="bstreeviewmethodoptions.html">BSTreeViewMethodOptions</a>.<a href="bstreeviewmethodoptions.html#_force">_force</a></p>
 						<ul>
-							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/b3ac71c/src/lib/BSTreeViewMethodOptions.ts#L13">lib/BSTreeViewMethodOptions.ts:13</a></li>
+							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/e840634/src/lib/BSTreeViewMethodOptions.ts#L13">lib/BSTreeViewMethodOptions.ts:13</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
 						<div class="lead">
-							<p>Force a change of the node state, even if the vaklue is not changed. Mostly useful for internal usage</p>
+							<p>Force a change of the node state, even if the value is not changed. Mostly useful for internal usage</p>
 						</div>
 						<dl class="tsd-comment-tags">
 							<dt>internal</dt>
@@ -162,7 +162,7 @@
 					<div class="tsd-signature tsd-kind-icon">levels<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span><span class="tsd-signature-symbol"> = 999</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/b3ac71c/src/lib/BSTreeViewExpandOptions.ts#L10">lib/BSTreeViewExpandOptions.ts:10</a></li>
+							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/e840634/src/lib/BSTreeViewExpandOptions.ts#L10">lib/BSTreeViewExpandOptions.ts:10</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -178,7 +178,7 @@
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="bstreeviewmethodoptions.html">BSTreeViewMethodOptions</a>.<a href="bstreeviewmethodoptions.html#silent">silent</a></p>
 						<ul>
-							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/b3ac71c/src/lib/BSTreeViewMethodOptions.ts#L6">lib/BSTreeViewMethodOptions.ts:6</a></li>
+							<li>Defined in <a href="https://github.com/jbtronics/bs-treeview/blob/e840634/src/lib/BSTreeViewMethodOptions.ts#L6">lib/BSTreeViewMethodOptions.ts:6</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
